Remove admin lte

--- a/app/javascript/stylesheets/app.scss
+++ b/app/javascript/stylesheets/app.scss
@@ -7,11 +7,11 @@ File: Main Css File
 */
 
 //Core files
-// @import "./node_modules/bootstrap/scss/functions";
-// @import "./node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/functions";
+@import "../../../node_modules/bootstrap/scss/variables";
 @import "config/saas/variables";
 @import "config/saas/custom-variables";
-// @import "./node_modules/bootstrap/scss/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 
 // Structure
 @import "custom/structure/general";
