--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -1,57 +1,87 @@
 <div class="row">
   <div class="col-12">
-    <div class="card">
-      <div class="card-header">
-        <%= link_to new_user_broadcast_path do %>
-          <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> 新規作成</button>
-        <% end %>
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item"><a href="javascript: void(0);">メッセージ</a></li>
+          <li class="breadcrumb-item active">一斉配信一覧</li>
+        </ol>
       </div>
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table table-bordered table-striped index">
-          <%# Header %>
-            <thead>
-              <tr>
-                <th class="fw-200">日時</th>
-                <th>タイトル</th>
-                <th class="fw-120">状況</th>
-                <th>配信先</th>
-                <th>配信数</th>
-                <th class="fw-150"></th>
-              </tr>
-            </thead>
-            <%# Data %>
-            <tbody>
-              <% @broadcasts.each do |broadcast| %>
-                <tr>
-                  <td>
-                    <%= formatted_time(broadcast.deliver_at) || '未配信' %>
-                  </td>
-                  <td><%= broadcast.title %></td>
-                  <td><%= render_broadcast_status(broadcast.status).html_safe %></td>
-                  <td><span class="d-flex flex-wrap align-items-center"><%= render_broadcast_condition(broadcast).html_safe %></span></td>
-                  <td>0</td>
-                  <td>
-                    <%= link_to edit_user_broadcast_path(broadcast) do %>
-                      <%= button_tag "編集", class: "btn btn-primary btn-xs mr-2", disabled: !broadcast.editable? %>
-                    <% end %>
-                    <%= link_to delete_confirm_user_broadcast_path(broadcast), remote: true do %>
-                      <%= button_tag "削除", class: "btn btn-danger btn-xs", disabled: !broadcast.destroyable? %>
-                    <% end %>
-                  </td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-        <%# Pagination %>
-        <div class="d-flex justify-content-center mt-4">
-          <% if @broadcasts.size == 0 %>
-            <b>データはありません。</b>
+      <h4 class="page-title">一斉配信一覧</h4>
+    </div>
+  </div>
+</div>
+
+<div class="row mb-2">
+  <div class="col-sm-4">
+    <%= link_to new_user_broadcast_path, class: "btn btn-success btn-rounded mb-3" do %>
+      <i class="mdi mdi-plus"></i> 新規作成
+      <% end %>
+  </div>
+  <div class="col-sm-8" hidden>
+    <div class="text-sm-right">
+      <div class="btn-group mb-3">
+        <button type="button" class="btn btn-primary">全て</button>
+      </div>
+      <div class="btn-group mb-3 ml-1">
+        <button type="button" class="btn btn-light">Ongoing</button>
+        <button type="button" class="btn btn-light">Finished</button>
+      </div>
+    </div>
+  </div><!-- end col-->
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-centered mb-0">
+        <thead>
+          <tr>
+            <th>日時</th>
+            <th>タイトル</th>
+            <th>状況</th>
+            <th>配信先</th>
+            <th>配信数</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @broadcasts.each do |broadcast| %>
+            <tr>
+              <td>
+                <%= formatted_time(broadcast.deliver_at) || '未配信' %>
+              </td>
+              <td>
+                <%= broadcast.title %>
+              </td>
+              <td>
+                <%= render_broadcast_status(broadcast.status).html_safe %>
+              </td>
+              <td>
+                <span class="d-flex flex-wrap align-items-center">
+                  <%= render_broadcast_condition(broadcast).html_safe %>
+                </span>
+              </td>
+              <td>0</td>
+              <td class="table-action">
+                <%= link_to edit_user_broadcast_path(broadcast), class:"action-icon" do %>
+                  <i class="mdi mdi-pencil"></i>
+                <% end %>
+                <%= link_to delete_confirm_user_broadcast_path(broadcast), class:"action-icon", remote: true do %>
+                  <i class="mdi mdi-delete"></i>
+                <% end %>
+              </td>
+            </tr>
           <% end %>
-          <%= paginate @broadcasts %>
-        </div>
-      </div>
+        </tbody>
+      </table>
+    </div>
+    <%# Pagination %>
+    <div class="d-flex justify-content-center mt-4">
+      <% if @broadcasts.size==0 %>
+        <b>データはありません。</b>
+      <% end %>
+      <%= paginate @broadcasts %>
     </div>
   </div>
 </div>
