Apply theme to broadcast index page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "./app.scss";
 @import "./icons.scss";
+@import "admin-lte";
 @import "toastr/build/toastr";
 @import "bootstrap-vue/dist/bootstrap-vue.css";
 @import "./emojione/emojione.min.css";
