--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -1,31 +1,55 @@
+<div class="col-12">
+  <div class="page-title-box">
+    <h4 class="page-title">ダッシュボード</h4>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xl-5 col-lg-6">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="card widget-flat">
+          <div class="card-body">
+            <div class="float-right">
+              <i class="mdi mdi-account-multiple widget-icon"></i>
+            </div>
+            <h5 class="text-muted font-weight-normal mt-0" title="Number of Customers">友達数</h5>
+            <h3 class="mt-3 mb-3"><%= @friend_count %>人</h3>
+            <p class="mb-0 text-muted">
+              <span class="text-success mr-2"><i class="mdi mdi-arrow-up-bold"></i> 5.27%</span>
+              <span class="text-nowrap">Since last month</span>
+            </p>
+          </div> <!-- end card-body-->
+        </div> <!-- end card-->
+      </div> <!-- end col-->
+
+      <div class="col-lg-6">
+        <div class="card widget-flat">
+          <div class="card-body">
+            <div class="float-right">
+              <i class="mdi mdi-send widget-icon"></i>
+            </div>
+            <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">月のメッセージ送信数</h5>
+            <h3 class="mt-3 mb-3">410</h3>
+            <p class="mb-0 text-muted">
+              <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
+              <span class="text-nowrap">Since last month</span>
+            </p>
+          </div> <!-- end card-body-->
+        </div> <!-- end card-->
+      </div> <!-- end col-->
+    </div> <!-- end row -->
+  </div>
+</div>
+
 <div class="row">
   <div class="col-lg-8">
-    <div class="d-flex">
-      <div class="info-box flex-grow-1 mr-2">
-        <span class="info-box-icon bg-success"><i class="far fa-flag"></i></span>
-
-        <div class="info-box-content">
-          <span class="info-box-text">友達数</span>
-          <span class="info-box-number"><%= @friend_count %>人</span>
-        </div>
-      </div>
-
-      <div class="info-box flex-grow-1">
-        <span class="info-box-icon bg-info"><i class="far fa-envelope"></i></span>
-
-        <div class="info-box-content">
-          <span class="info-box-text"><%= Date.today.month %>月のメッセージ送信数</span>
-          <span class="info-box-number">410メッセージ</span>
-        </div>
-      </div>
-    </div>
-
     <div class="card">
       <div class="card-header text-md">
         <b>最新受信メッセージ一覧</b>
       </div>
       <div class="card-body p-0">
-        <table class="table index">
+        <table class="table table-centered mb-0">
           <thead>
             <tr>
               <th>送信日時</th>
@@ -37,11 +61,17 @@
           <tbody>
             <% @messages.each do |message| %>
               <tr>
-                <td><%= formatted_time(message.created_at) %></td>
-                <td><%= message.sender.name %></td>
-                <td><%= message.text %></td>
+                <td>
+                  <%= formatted_time(message.created_at) %>
+                </td>
+                <td>
+                  <%= message.sender.name %>
+                </td>
+                <td>
+                  <%= message.text %>
+                </td>
               </tr>
-            <% end %>
+              <% end %>
           </tbody>
         </table>
       </div>
