--- a/app/views/user/auto_responses/index.html.erb
+++ b/app/views/user/auto_responses/index.html.erb
@@ -1,1 +1,14 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item"><a href="javascript: void(0);">メッセージ</a></li>
+          <li class="breadcrumb-item active">自動応答一覧</li>
+        </ol>
+      </div>
+      <h4 class="page-title">自動応答一覧</h4>
+    </div>
+  </div>
+</div>
 <auto-response-index></auto-response-index>
