Change left side menu's background color to dark

--- a/app/javascript/stylesheets/config/saas/_custom-variables.scss
+++ b/app/javascript/stylesheets/config/saas/_custom-variables.scss
@@ -7,7 +7,7 @@ $shadow: 0px 0px 35px 0px rgba(154, 161, 171, 0.15);
 $shadow-lg: 0 0 45px 0 rgba(0, 0, 0, 0.12);
 
 // Background left-sidebar
-$bg-leftbar: linear-gradient(135deg, #0e4d01 0%, #067c16 60%);
+$bg-leftbar: #313a46;
 $bg-leftbar-light: #ffffff;
 $bg-leftbar-dark: #313a46;
 $bg-topnav: #313a46;
