Remove bootstrap cause duplication

--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -17,7 +17,7 @@
     <div class="row mb-2">
       <div class="col-sm-4">
         <%= link_to new_user_broadcast_path, class: "btn btn-success btn-rounded" do %>
-          <i class="mdi mdi-plus"></i> 新規作成
+          <i class="fa fa-plus"></i> 新規作成
           <% end %>
       </div>
       <div class="col-sm-8" hidden>
