--- a/app/views/admin/base/_header.html.erb
+++ b/app/views/admin/base/_header.html.erb
@@ -1,26 +1,36 @@
-  <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand navbar-light">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-     <li class="dropdown user user-menu">
-        <a class="nav-link user-panel" data-toggle="dropdown" href="#">
-          <span class="hidden-xs"><%= current_admin&.email %></span>
-          <img src="https://icon-library.com/images/user-icon-image/user-icon-image-18.jpg" class="user-image" alt="User Image">
-          <i class="fa fa-angle-down"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <%= link_to '<i class="fas fa-sign-out-alt mr-1"></i><p>ログアウト</p>'.html_safe, 
-              destroy_admin_session_path,
-              method: :delete,
-              class: "dropdown-item dropdown-footer d-flex align-items-center justify-content-center"
-            %>
+<!-- Topbar Start -->
+<div class="navbar-custom">
+  <ul class="list-unstyled topbar-right-menu float-right mb-0">
+    <li class="dropdown notification-list">
+      <a class="nav-link dropdown-toggle nav-user arrow-none mr-0" data-toggle="dropdown" href="#" role="button"
+        aria-haspopup="false" aria-expanded="false">
+        <span class="account-user-avatar">
+          <img src="https://icon-library.com/images/user-icon-image/user-icon-image-18.jpg" alt="user-image" class="rounded-circle">
+        </span>
+      </a>
+      <div class="dropdown-menu dropdown-menu-right dropdown-menu-animated topbar-dropdown-menu profile-dropdown">
+        <!-- item-->
+        <div class=" dropdown-header noti-title">
+          <h6 class="text-overflow m-0">Welcome !</h6>
         </div>
-      </li>
-    </ul>
-  </nav>
-  <!-- /.navbar -->
+
+        <!-- item-->
+        <a href="javascript:void(0);" class="dropdown-item notify-item">
+          <i class="mdi mdi-account-edit mr-1"></i>
+          <span>アカウント設定</span>
+        </a>
+
+        <!-- item-->
+        <%= link_to destroy_admin_session_path, method: :delete, class: "dropdown-item notify-item" do %>
+          <i class="mdi mdi-logout mr-1"></i>
+          <span>ログアウト</span>
+        <% end %>
+      </div>
+    </li>
+
+  </ul>
+  <button class="button-menu-mobile open-left disable-btn">
+    <i class="mdi mdi-menu"></i>
+  </button>
+</div>
+<!-- end Topbar -->
