--- a/app/views/admin/base/_left_sidebar_menu.html.erb
+++ b/app/views/admin/base/_left_sidebar_menu.html.erb
@@ -1,34 +1,28 @@
-  <aside class="main-sidebar elevation-4 sidebar-light-info">
-    <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link navbar-info">
-      <span class="text-white brand-text font-weight-bold">LINE INSIGHT</span>
-    </a>
+  <!-- ========== Left Sidebar Start ========== -->
+<div class="left-side-menu">
+  <!-- LOGO -->
+  <a href="index.html" class="logo text-center logo-light">
+    <span class="text-white brand-text font-weight-bold">LINE INSIGHT</span>
+  </a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <!-- User List -->
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <li class="nav-item">
-            <%= link_to '<i class="nav-icon fa fa-clipboard-list"></i><p>ユーザー一覧</p>'.html_safe,
-              admin_users_path,
-              class: "nav-link #{controller?("admin/users") ? 'active' : ''}"
-            %>
-          </li>
-        </ul>
+  <div class="h-100" id="left-side-menu-container" data-simplebar>
+    <!--- Sidemenu -->
+    <ul class="metismenu side-nav">
 
-        <!-- Announcement List -->
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <li class="nav-item">
-            <%= link_to '<i class="nav-icon far fa-bell"></i><p>お知らせ一覧</p>'.html_safe,
-              admin_announcements_path,
-              class: "nav-link #{controller?("admin/announcements") ? 'active' : ''}"
-            %>
-          </li>
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
+      <li class="side-nav-item <%= controller?("user/users") ? 'mm-active' : '' %>">
+        <%= link_to admin_users_path, class: "side-nav-link #{controller?("user/users") ? 'active' : '' }" do %>
+          <i class="uil-users-alt"></i>
+          <span> クライアント一覧 </span>
+        <% end %>
+      </li>
+
+      <!-- トーク -->
+      <li class="side-nav-item <%= controller?("user/announcements") ? 'mm-active' : '' %>">
+        <%= link_to admin_announcements_path, class: "side-nav-link #{controller?("user/announcements") ? 'active' : '' }" do %>
+          <i class="uil-comments-alt"></i>
+          <span> お知らせ一覧 </span>
+        <% end %>
+      </li>
+    </ul>
+  </div>
+</div>
