--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -16,7 +16,7 @@
   <div class="card-body">
     <div class="row mb-2">
       <div class="col-sm-4">
-        <%= link_to new_user_broadcast_path, class: "btn btn-success btn-rounded" do %>
+        <%= link_to new_user_broadcast_path, class: "btn btn-success" do %>
           <i class="fa fa-plus"></i> 新規作成
           <% end %>
       </div>
