--- a/app/views/user/channels/index.html.erb
+++ b/app/views/user/channels/index.html.erb
@@ -1,1 +1,14 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item"><a href="javascript: void(0);">1対1トーク</a></li>
+          <li class="breadcrumb-item active">個別トーク</li>
+        </ol>
+      </div>
+      <h4 class="page-title">個別トーク</h4>
+    </div>
+  </div>
+</div>
 <channel-index></channel-index>
