--- a/app/views/user/friends/index.html.erb
+++ b/app/views/user/friends/index.html.erb
@@ -1,5 +1,19 @@
 <div class="row">
   <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item"><a href="javascript: void(0);">1対1トーク</a></li>
+          <li class="breadcrumb-item active">友達一覧</li>
+        </ol>
+      </div>
+      <h4 class="page-title">友達一覧</h4>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
     <div class="card">
       <div class="card-header">
         <!-- Start: search condition -->
