--- a/app/views/user/scenarios/index.html.erb
+++ b/app/views/user/scenarios/index.html.erb
@@ -19,7 +19,7 @@
         <div class="row mb-2">
           <div class="col-sm-4">
             <%= link_to new_user_scenario_path do %>
-              <button type="button" class="btn btn-success btn-rounded mr-2"><i class="fa fa-plus"></i> 新規作成</button>
+              <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> 新規作成</button>
             <% end %>
           </div>
         </div>
@@ -42,7 +42,7 @@
                 <td><%= render_scenario_status(scenario.status) %></td>
                 <td>
                   <%= link_to user_scenario_messages_path(scenario), class: "btn btn-light btn-sm mr-1" do %>
-                    配信文設定
+                    メッセージ一覧 <b>（<%= scenario.scenario_messages_count %>）</b>
                   <% end %>
                 </td>
                 <td class="table-action">
