Minor style fixes on tag index page

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -56,7 +56,7 @@
       <!-- 自動応答 -->
       <li class="side-nav-item <%= controller?("user/auto_responses") ? 'mm-active' : '' %>">
         <%= link_to user_auto_responses_path, class: "side-nav-link #{controller?("user/auto_responses" ) ? 'active' : '' }" do %>
-          <i class="uil-message"></i>
+          <i class="uil-robot"></i>
           <span>自動応答</span>
         <% end %>
       </li>
