--- a/app/views/user/tags/index.html.erb
+++ b/app/views/user/tags/index.html.erb
@@ -1,1 +1,14 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item"><a href="javascript: void(0);">友達情報</a></li>
+          <li class="breadcrumb-item active">タグ管理</li>
+        </ol>
+      </div>
+      <h4 class="page-title">タグ管理</h4>
+    </div>
+  </div>
+</div>
 <tag-index></tag-index>
