--- a/app/views/user/scenarios/new.html.erb
+++ b/app/views/user/scenarios/new.html.erb
@@ -1,1 +1,15 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item"><a href="javascript: void(0);">メッセージ</a></li>
+          <li class="breadcrumb-item active"><%= link_to "シナリオ一覧", user_scenarios_path %></li>
+          <li class="breadcrumb-item active">新規シナリオ登録</li>
+        </ol>
+      </div>
+      <h4 class="page-title">新規シナリオ登録</h4>
+    </div>
+  </div>
+</div>
 <scenario-editor></scenario-editor>
