--- a/app/views/user/surveys/new.html.erb
+++ b/app/views/user/surveys/new.html.erb
@@ -3,7 +3,7 @@
     <div class="page-title-box">
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item"><a href="javascript: void(0);">メッセージ</a></li>
+          <li class="breadcrumb-item">メッセージ</li>
           <li class="breadcrumb-item active"><%= link_to "回答フォーム一覧", user_surveys_path %></li>
           <li class="breadcrumb-item active">新規回答フォームの登録</li>
         </ol>
