--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -1,13 +1,22 @@
 <div class="row">
   <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">メッセージ</li>
+          <li class="breadcrumb-item"><%= link_to "シナリオ一覧", user_scenarios_path %></li>
+          <li class="breadcrumb-item"><%= @scenario.title.truncate(10) %></li>
+          <li class="breadcrumb-item active">メッセージ一覧</li>
+        </ol>
+      </div>
+      <h4 class="page-title">メッセージ一覧</h4>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
     <div class="card">
       <div class="card-header d-flex align-items-center">
-        <%= link_to user_scenarios_path, class: "btn text-info" do %>
-          <i class="fa fa-arrow-left"></i>シナリオ一覧
-        <% end %>
-
-        <span class="m-auto font-weight-bold">「<%= @scenario.title %>」のメッセージ一覧</span>
-        
         <%= link_to new_user_scenario_message_path do %>
           <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> メッセージを追加</button>
         <% end %>
