--- a/app/views/user/scenarios/_copy_confirm.html.erb
+++ b/app/views/user/scenarios/_copy_confirm.html.erb
@@ -2,14 +2,14 @@
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header align-items-center">
-        <label class="m-0">本当にコビーしてよろしですか？</label>
+        <label class="m-0">本当にコピーしてよろしですか？</label>
         <button type="button" class="close" data-dismiss="modal">×</button>
       </div>
       <div class="modal-body">
         シナリオ名：<%= @scenario.title %>
       </div>
       <div class="modal-footer">
-        <%= link_to 'コビー', copy_user_scenario_path(@scenario), class: "btn btn-primary fw-100", method: :post %>
+        <%= link_to 'コピー', copy_user_scenario_path(@scenario), class: "btn btn-primary fw-100", method: :post %>
       </div>      
     </div>
   </div>
