Convert erb html to html vuejs

--- a/app/views/admin/announcements/index.html.erb
+++ b/app/views/admin/announcements/index.html.erb
@@ -1,68 +1,5 @@
-<div class="row">
-  <div class="col-12">
-    <div class="card">
-      <div class="card-header d-flex align-items-center">
-        <%= link_to new_admin_announcement_path do %>
-          <button type="button" class="btn btn-info fw-120 mr-2"><i class="fa fa-plus"></i> 新規登録 </button>
-        <% end %>
-      </div>
-      <div class="card-body">
-        <div class="table-responsive">
-           <table class="table table-bordered table-striped">
-           <%# Header %>
-              <thead>
-                <tr>
-                  <th width="5%" class="fw-50 text-center"><%= sort_link(@q, :id, 'ID', default_order: :desc) %></th>
-                  <th width="20%" class="fw-150">日時</th>
-                  <th width="40%"class="fw-200">タイトル</th>
-                  <th width="20%" class="fw-150">変更日時</th>
-                  <th width="15%" class="fw-100">操作</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @announcements.each do |announcement| %>
-                  <tr>
-                    <td class="text-center"><%= link_to announcement.id, admin_announcement_path(announcement) %></td>
-                    <td><%= formatted_time(announcement.announced_at) %></td>
-                    <td><%= announcement.title %></td>
-                    <td><%= formatted_time(announcement.updated_at) %></td>
-                    <td>
-                      <div class="btn-group">
-                        <%= link_to '編集', edit_admin_announcement_path(announcement), class: "btn btn-warning btn-sm" %>
-                        <button type="button" class="btn btn-warning dropdown-toggle dropdown-icon" data-toggle="dropdown" aria-expanded="false"></button>
-                        <div class="dropdown-menu bg-white" role="menu" style="">
-                          <a class="dropdown-item" role="button" data-toggle="modal" data-target="#announcementDetail" onclick="confirmScope(<%= announcement.id %>)">
-                            プレビュー
-                          </a>
-                          <div class="dropdown-divider"></div>
-                          <%= link_to '削除', delete_confirm_admin_announcement_path(announcement), remote: true, class: "dropdown-item" %>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-                <% end %>
-              </tbody>
-           <%# Data %>
-           </table>
-        </div>
-        <%# Pagination %>
-        <div class="d-flex justify-content-center mt-4">
-          <% if @announcements.size == 0 %>
-            <b>データはありません。</b>
-          <% end %>
-          <%= paginate @announcements %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div id='confirmDelContent'></div>
-
-<modal-announcement-show :announcements="<%= @announcements.to_json %>" :status="`admin`"></modal-announcement-show>
-<input type="hidden" id="inputValue">
-<script>
-  function confirmScope(id) {
-    $('#inputValue').val(id);
-  }
-</script>
+<announcement-index 
+  :announcements="<%=@announcements.to_json%>" 
+  :current_page="<%=@current_page.to_i%>"
+  :total_rows_default="<%=@total_rows.to_i%>"
+></announcement-index>
