Use store load data

--- a/app/views/admin/announcements/index.html.erb
+++ b/app/views/admin/announcements/index.html.erb
@@ -1,5 +1,1 @@
-<announcement-index 
-  :announcements="<%=@announcements.to_json%>" 
-  :current_page="<%=@current_page.to_i%>"
-  :total_rows_default="<%=@total_rows.to_i%>"
-></announcement-index>
+<announcement-index></announcement-index>
