Minor fixes on chat ui

--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body data-scrollbar-auto-hide="n" class="sidebar-mini layout-fixed control-sidebar-slide-open layout-navbar-fixed text-sm" style="height: auto;">
+  <body class="sidebar-mini layout-fixed control-sidebar-slide-open layout-navbar-fixed text-sm" style="height: auto;">
     <div class="wrapper" id="application">
       <%= render "user/base/left_sidebar_menu"%>
       <div class="content-page">
