Reset media filter before fetching records

--- a/app/views/user/broadcasts/new.html.erb
+++ b/app/views/user/broadcasts/new.html.erb
@@ -1,1 +1,15 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">メッセージ</li>
+          <li class="breadcrumb-item active"><%= link_to "一斉配信一覧", user_broadcasts_path %></li>
+          <li class="breadcrumb-item active">一斉配信登録</li>
+        </ol>
+      </div>
+      <h4 class="page-title">一斉配信登録</h4>
+    </div>
+  </div>
+</div>
 <broadcast-editor></broadcast-editor>
