--- a/app/views/user/templates/new.html.erb
+++ b/app/views/user/templates/new.html.erb
@@ -1,1 +1,15 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">メッセージ</li>
+          <li class="breadcrumb-item"><%= link_to 'テンプレート一覧', user_templates_path %></li>
+          <li class="breadcrumb-item active">新規テンプレート登録</li>
+        </ol>
+      </div>
+      <h4 class="page-title">新規テンプレート登録</h4>
+    </div>
+  </div>
+</div>
 <message-template-editor></message-template-editor>
