--- a/app/views/admin/announcements/index.html.erb
+++ b/app/views/admin/announcements/index.html.erb
@@ -1,1 +1,14 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">announcements index</li>
+          <li class="breadcrumb-item active">シナリオ一覧</li>
+        </ol>
+      </div>
+      <h4 class="page-title">announcements index</h4>
+    </div>
+  </div>
+</div>
 <announcement-index></announcement-index>
