--- a/app/views/admin/announcements/new.html.erb
+++ b/app/views/admin/announcements/new.html.erb
@@ -1,1 +1,15 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">メッセージ</li>
+          <li class="breadcrumb-item active"><%= link_to "シナリオ一覧", admin_announcements_path %></li>
+          <li class="breadcrumb-item active">新規シナリオ登録</li>
+        </ol>
+      </div>
+      <h4 class="page-title">新規シナリオ登録</h4>
+    </div>
+  </div>
+</div>
 <announcement-create></announcement-create>
