--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -5,46 +5,72 @@
 </div>
 
 <div class="row">
-  <div class="col-xl-5 col-lg-6">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="card widget-flat">
-          <div class="card-body">
-            <div class="float-right">
-              <i class="mdi mdi-account-multiple widget-icon"></i>
-            </div>
-            <h5 class="text-muted font-weight-normal mt-0" title="Number of Customers">友達数</h5>
-            <h3 class="mt-3 mb-3"><%= @friend_count %>人</h3>
-            <p class="mb-0 text-muted">
-              <span class="text-success mr-2"><i class="mdi mdi-arrow-up-bold"></i> 5.27%</span>
-              <span class="text-nowrap">Since last month</span>
-            </p>
-          </div> <!-- end card-body-->
-        </div> <!-- end card-->
-      </div> <!-- end col-->
+  <div class="col-lg-3">
+    <div class="card widget-flat">
+      <div class="card-body">
+        <div class="float-right">
+          <i class="mdi mdi-account-multiple widget-icon"></i>
+        </div>
+        <h5 class="text-muted font-weight-normal mt-0" title="Number of Customers">友達数</h5>
+        <h3 class="mt-3 mb-3"><%= @friend_count %>人</h3>
+        <p class="mb-0 text-muted">
+          <span class="text-success mr-2"><i class="mdi mdi-arrow-up-bold"></i> 5.27%</span>
+          <span class="text-nowrap">Since last month</span>
+        </p>
+      </div> <!-- end card-body-->
+    </div> <!-- end card-->
+  </div> <!-- end col-->
 
-      <div class="col-lg-6">
-        <div class="card widget-flat">
-          <div class="card-body">
-            <div class="float-right">
-              <i class="mdi mdi-send widget-icon"></i>
-            </div>
-            <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">月のメッセージ送信数</h5>
-            <h3 class="mt-3 mb-3">410</h3>
-            <p class="mb-0 text-muted">
-              <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
-              <span class="text-nowrap">Since last month</span>
-            </p>
-          </div> <!-- end card-body-->
-        </div> <!-- end card-->
-      </div> <!-- end col-->
-    </div> <!-- end row -->
+  <div class="col-lg-3">
+    <div class="card widget-flat">
+      <div class="card-body">
+        <div class="float-right">
+          <i class="mdi mdi-send widget-icon"></i>
+        </div>
+        <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">月のメッセージ送信数</h5>
+        <h3 class="mt-3 mb-3">410</h3>
+        <p class="mb-0 text-muted">
+          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
+          <span class="text-nowrap">Since last month</span>
+        </p>
+      </div> <!-- end card-body-->
+    </div> <!-- end card-->
+  </div> <!-- end col-->
+  <div class="col-lg-3">
+    <div class="card widget-flat">
+      <div class="card-body">
+        <div class="float-right">
+          <i class="mdi mdi-send widget-icon"></i>
+        </div>
+        <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">TODO</h5>
+        <h3 class="mt-3 mb-3">410</h3>
+        <p class="mb-0 text-muted">
+          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
+          <span class="text-nowrap">Since last month</span>
+        </p>
+      </div> <!-- end card-body-->
+    </div> <!-- end card-->
+  </div> <!-- end col-->
+  <div class="col-lg-3">
+    <div class="card widget-flat">
+      <div class="card-body">
+        <div class="float-right">
+          <i class="mdi mdi-send widget-icon"></i>
+        </div>
+        <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">TODO</h5>
+        <h3 class="mt-3 mb-3">410</h3>
+        <p class="mb-0 text-muted">
+          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
+          <span class="text-nowrap">Since last month</span>
+        </p>
+      </div> <!-- end card-body-->
+    </div> <!-- end card-->
   </div>
 </div>
 
 <div class="row">
   <div class="col-lg-8">
-    <div class="card">
+    <div class="card mvh-50">
       <div class="card-header text-md">
         <b>最新受信メッセージ一覧</b>
       </div>
@@ -79,16 +105,6 @@
   </div>
 
   <div class="col-lg-4">
-    <announcement-home-index 
-      :announcements="<%=@announcements.to_json%>" 
-    ></announcement-home-index>
-    <!-- <div>内容</div> -->
-    <%# Pagination %>
-    <div class="d-flex justify-content-center mt-4">
-      <% if @announcements.size == 0 %>
-        <b>データはありません。</b>
-      <% end %>
-      <%= paginate @announcements %>
-    </div>
+    <home-announcements></home-announcements>
   </div>
 </div>
