--- a/app/views/admin/announcements/new.html.erb
+++ b/app/views/admin/announcements/new.html.erb
@@ -4,12 +4,12 @@
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
           <li class="breadcrumb-item">お知らせ</li>
-          <li class="breadcrumb-item active"><%= link_to "お知らせ一覧", admin_announcements_path %></li>
-          <li class="breadcrumb-item active">create announcement</li>
+          <li class="breadcrumb-item"><%= link_to "お知らせ一覧", admin_announcements_path %></li>
+          <li class="breadcrumb-item active">新規お知らせ登録</li>
         </ol>
       </div>
-      <h4 class="page-title">create announcement</h4>
+      <h4 class="page-title">新規お知らせ登録</h4>
     </div>
   </div>
 </div>
-<announcement-create></announcement-create>
+<announcement-editor></announcement-editor>
