--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -12,77 +12,4 @@
   </div>
 </div>
 
-<div class="card">
-  <div class="card-body">
-    <div class="row mb-2">
-      <div class="col-sm-4">
-        <%= link_to new_user_broadcast_path, class: "btn btn-success" do %>
-          <i class="fa fa-plus"></i> 新規作成
-          <% end %>
-      </div>
-      <div class="col-sm-8" hidden>
-        <div class="text-sm-right">
-          <div class="btn-group mb-3">
-            <button type="button" class="btn btn-primary">全て</button>
-          </div>
-          <div class="btn-group mb-3 ml-1">
-            <button type="button" class="btn btn-light">Ongoing</button>
-            <button type="button" class="btn btn-light">Finished</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="table-responsive">
-      <table class="table table-centered mb-0">
-        <thead class="thead-light">
-          <tr>
-            <th class="sorting">日時</th>
-            <th>タイトル</th>
-            <th>状況</th>
-            <th>配信先</th>
-            <th>配信数</th>
-            <th>操作</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @broadcasts.each do |broadcast| %>
-            <tr>
-              <td>
-                <%= formatted_time(broadcast.deliver_at) || '未配信' %>
-              </td>
-              <td>
-                <%= broadcast.title %>
-              </td>
-              <td>
-                <%= render_broadcast_status(broadcast.status).html_safe %>
-              </td>
-              <td>
-                <span class="d-flex flex-wrap align-items-center">
-                  <%= render_broadcast_condition(broadcast).html_safe %>
-                </span>
-              </td>
-              <td>0</td>
-              <td class="table-action">
-                <%= link_to edit_user_broadcast_path(broadcast), class:"action-icon" do %>
-                  <i class="mdi mdi-pencil"></i>
-                <% end %>
-                <%= link_to delete_confirm_user_broadcast_path(broadcast), class:"action-icon", remote: true do %>
-                  <i class="mdi mdi-delete"></i>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <%# Pagination %>
-    <div class="d-flex justify-content-center mt-4">
-      <% if @broadcasts.size==0 %>
-        <b>データはありません。</b>
-      <% end %>
-      <%= paginate @broadcasts %>
-    </div>
-  </div>
-</div>
-
-<div id='confirmDelContent'></div>
+<broadcast-index></broadcast-index>
